<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/modeltv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/model_name"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp" />
    <ImageView
        android:id="@+id/capturedImage"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/placeholder"
        android:onClick="reload"/>

    <TextView
        android:id="@+id/pred"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/result"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto_medium"
        android:onClick="Capture"
        android:padding="10dp"
        android:text="@string/capture_button_caption" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/roboto_medium"
        android:onClick="pickPhoto"
        android:padding="10dp"
        android:text="@string/select_from_gallery" />
</LinearLayout>